--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -fopenmp")
 find_library(OPENMP_LIB libomp.dylib /usr/local/lib)
 
 add_executable(Final_Project
-        main.cpp statistic_tool.cpp statistic_tool.h Payoff.h BSMModel.cpp BSMModel.h check_reduction.cpp check_asymptotic_result.cpp varianceReduction.cpp varianceReduction.h)
+        main.cpp statistic_tool.cpp statistic_tool.h Payoff.h BSMModel.cpp BSMModel.h check_reduction.cpp check_asymptotic_result.cpp controlVariates.cpp controlVariates.h)
 
 target_link_libraries(Final_Project LINK_PUBLIC ${OPENMP_LIB})
